OO-4604: list only focused curriculum elements in add/import members